# skvlite

./: .gitignore  README.md  __init__.py  compress_database.py  compressed_test.sqlite  pyproject.toml  run-mypy.sh  run-pylint.sh  test.py  test.sqlite
.github/workflows/: ci.yaml
examples/: concurrency.py
skvlite/: __init__.py  skvlite.py  skvlite_test.py  test_skvlite.py
skvlite/skvlite.py/: skvlite.py
test/: test_skvlite.py
